--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Local Tools</title>
+
+    <meta property="og:title" content="Local Tools - Home"/>
+    <meta property="og:description" content="Local Tools for generate tools, no servers, free"/>
+    <meta property="og:locale" content="en_GB"/>
+    <meta property="og:type" content="website"/>
+
   </head>
   <body>
     <div id="root"></div>
