--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Local Tools</title>
+    <title>Local Tools | Home</title>
 
     <meta property="og:title" content="Local Tools - Home"/>
-    <meta property="og:description" content="Local Tools for generate tools, no servers, free"/>
+    <meta property="og:description" content="Collections of web base tools, no server uploading, privacy, efficiency, free, open sources"/>
     <meta property="og:locale" content="en_GB"/>
     <meta property="og:type" content="website"/>
+    <meta property="og:image:alt" content="Tools logo" />
+
+    <meta property="og:url" content="https://local-tools-psi.vercel.app/" />
 
   </head>
   <body>
