--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image:alt" content="Tools logo" />
 
-    <meta property="og:url" content="https://local-tools-psi.vercel.app/" />
+    <meta property="og:url" content="https://media-local-tools.vercel.app/" />
 
   </head>
   <body>
