--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Tools | Home</title>
 
+    <link rel="apple-touch-icon" href="/logo.ico" sizes="180x180">
+    <link rel="mask-icon" href="/logo.ico" color="#FFFFFF">
+    <meta name="theme-color" content="#ffffff">
+
     <meta property="og:title" content="Local Tools - Home"/>
     <meta property="og:description" content="Collections of web base tools, no server uploading, privacy, efficiency, free, open sources"/>
     <meta property="og:locale" content="en_GB"/>
